syntax="proto2";

package raft;
option java_package = "com.github.wenweihu86.raft.proto";
option java_outer_classname = "RaftProto";

enum ResCode {
    RES_CODE_SUCCESS = 0;
    RES_CODE_FAIL = 1;
    RES_CODE_NOT_LEADER = 2;
}

enum EntryType {
    ENTRY_TYPE_DATA = 0;
    ENTRY_TYPE_CONFIGURATION= 1;
};

message Endpoint {
    optional string host = 1;
    optional uint32 port = 2;
}

message Server {
    optional uint32 server_id = 1;
    optional Endpoint endpoint = 2;
}

message Configuration {
    repeated Server servers = 1;
}

message LogMetaData {
    optional uint64 current_term = 1;
    optional uint32 voted_for = 2;
    optional uint64 first_log_index = 3;
    optional uint64 commit_index = 4;
}

message SnapshotMetaData {
    optional uint64 last_included_index = 1;
    optional uint64 last_included_term = 2;
    optional Configuration configuration = 3;
}

message LogEntry {
    optional uint64 term = 1;
    optional uint64 index = 2;
    optional EntryType type = 3;
    optional bytes data = 4;
};

message VoteRequest {
    optional uint32 server_id = 1; // 请求选票的候选人的 Id
    optional uint64 term = 2; // 候选人的任期号
    optional uint64 last_log_term = 3; // 候选人的最后日志条目的任期号
    optional uint64 last_log_index = 4; // 候选人最后日志条目的索引值
};

message VoteResponse {
    optional uint64 term = 1; // 当前任期号，以便于候选人去更新自己的任期号
    optional bool granted = 2; // 候选人赢得了此张选票时为真
};

message AppendEntriesRequest {
    optional uint32 server_id = 1; // 领导人的Id
    optional uint64 term = 2; // 领导人的任期号
    optional uint64 prev_log_index = 3; // 新的日志条目紧随之前的索引值
    optional uint64 prev_log_term = 4; // prev_log_index条目的任期号
    optional uint64 commit_index = 5; // 领导人已经提交的日志的索引值
    repeated LogEntry entries = 6; // 准备存储的日志条目（表示心跳时为空）
};

message AppendEntriesResponse {
    optional ResCode res_code = 1; // 跟随者包含了匹配上 prevLogIndex 和 prevLogTerm 的日志时为真
    optional uint64 term = 2; // 当前的任期号，用于领导人去更新自己
    optional uint64 last_log_index = 3;
};

message InstallSnapshotRequest {
    optional uint32 server_id = 1;
    optional uint64 term = 2;
    optional SnapshotMetaData snapshot_meta_data = 3;
    optional string file_name = 4;
    optional uint64 offset = 5;
    optional bytes data = 6;
    optional bool is_first = 7;
    optional bool is_last = 8;
}

message InstallSnapshotResponse {
    optional ResCode res_code = 1;
    optional uint64 term = 2;
}

message GetLeaderRequest {
}

message GetLeaderResponse {
    optional ResCode res_code = 1;
    optional string res_msg = 2;
    optional Endpoint leader = 3;
}

message AddPeersRequest {
    repeated Server servers = 1;
}

message AddPeersResponse {
    optional ResCode res_code = 1;
    optional string res_msg = 2;
}

message RemovePeersRequest {
    repeated Server servers = 1;
}

message RemovePeersResponse {
    optional ResCode res_code = 1;
    optional string res_msg = 2;
}

message GetConfigurationRequest {
}

message GetConfigurationResponse {
    optional ResCode res_code = 1;
    optional string res_msg = 2;
    optional Server leader = 3;
    repeated Server servers = 4;
}
